--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "story-dev": "npx next dev --experimental-https"
   },
   "dependencies": {
+    "@storyblok/preview-bridge": "^2.1.6",
     "@storyblok/react": "^5.4.22",
     "next": "16.1.6",
     "react": "19.2.3",
